2011-04-06 arne

	* fix control-click in cocoa not a right click
	* fix an update bug with COptionMenu not setting the value correctly on popup
	* gdiplus line style implementation

2011-03-29 arne

	* add immediate text change style to CTextEdit
	* revert UTF8StringHelper optimization as it does not work under 64 bit
	* some views does not call setDirty(false) in their draw methods. fixed.
	* change default fonts on Mac to Arial like on Windows

2011-03-23 arne

	* added CTextButtton control view class

2011-03-20 arne

	* removed the sublisteners in CControl and replaced it by IDependency
	
2011-03-19 arne

	* new class IDependency see idependency.h for documentation
	* new IDataBrowser methods: dbAttached(..) and dbRemoved(..)

2011-03-16 arne

	* CGraphicsPath redesign
	* fix an issue with CScrollView and focus view drawing

2011-03-11 arne

	* Direct2D graphics path addArc method implementation. clockwise setting not yet.
	
2011-03-10 arne

	* new font face kStrikethroughFace (thanks to Bick Tick for this)
	* new class CString which holds a platform representation of a UTF8String.
		The CDrawContext class has one CString so that the platform code does not need to convert a string twice when drawing
		the string into a rectangle

2011-03-09 arne

	* CNewFileSelector implementation for Windows XP (thanks to Bick Tick for the implementation)
	* UTF8StringHelper optimization (only use malloc if more than 128 UTF-8 characters or 64 UTF-16 charachters needs to be translated)
	* fix drawing issue with Wavelab 7 on Windows (WS_EX_TRANSPARENT is now only set when the parent window has WS_EX_LAYERED style set)
	* the RGNDATA allocation in WM_PAINT on Windows is now only done when the size of this structure changes, otherwise the memory block will be remembered.
	* fix file drop on Windows (thanks to Bick Tick to fix this)
	
2011-03-06 arne

	* fix CFrame::getViewAt(..) returning wrong view in modal mode
	* use a template class for the view iterator

2011-03-04 arne
